<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_name1">Popular Movies</string>
    <string name="app_name2">Stock Hawk</string>
    <string name="app_name3">Build it Bigger</string>
    <string name="app_name4">Make Your App Material</string>
    <string name="app_name5">Go Ubiquitous</string>
    <string name="app_name6">Capstone </string>
    <string name="nano">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>

</resources>
