<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/udacity" />

        <Button
            android:id="@+id/pop_movies"
            android:text="@string/app_name1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="#B2EBF2" />

        <Button
            android:id="@+id/stock"
            android:text="@string/app_name2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="#B2EBF2" />

        <Button
            android:id="@+id/build_it"
            android:text="@string/app_name3"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="#B2EBF2" />

        <Button
            android:id="@+id/material_make"
            android:text="@string/app_name4"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="#B2EBF2" />

        <Button
            android:id="@+id/ubiquitous"
            android:text="@string/app_name5"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="#B2EBF2" />

        <Button
            android:id="@+id/capstone"
            android:text="@string/app_name6"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="#E91E63" />


    </LinearLayout>


</LinearLayout>